@@ -1,5 +1,5 @@
 /*
- * Copyright 2020 B2i Healthcare Pte Ltd, http://b2i.sg
+ * Copyright 2020-2021 B2i Healthcare Pte Ltd, http://b2i.sg
  * 
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -34,6 +34,7 @@ import java.util.Map;
 
 import org.junit.Test;
 
+import com.b2international.commons.json.Json;
 import com.b2international.snowowl.core.domain.IComponent;
 import com.b2international.snowowl.snomed.common.SnomedConstants.Concepts;
 import com.b2international.snowowl.snomed.common.SnomedRf2Headers;
@@ -42,8 +43,6 @@ import com.b2international.snowowl.snomed.core.domain.InactivationProperties;
 import com.b2international.snowowl.snomed.core.rest.AbstractSnomedApiTest;
 import com.b2international.snowowl.snomed.core.rest.SnomedApiTestConstants;
 import com.b2international.snowowl.snomed.core.rest.SnomedComponentType;
-import com.google.common.collect.ImmutableList;
-import com.google.common.collect.ImmutableMap;
 import com.google.common.collect.Maps;
 
 /**
@@ -57,10 +56,10 @@ public class SnomedConceptInactivationApiTest extends AbstractSnomedApiTest {
 			.statusCode(200)
 			.body("active", equalTo(false))
 			.body("definitionStatusId", equalTo(Concepts.PRIMITIVE))
-			.body("parentIds", equalTo(ImmutableList.of(IComponent.ROOT_ID)))
-			.body("ancestorIds", equalTo(ImmutableList.of()))
-			.body("statedParentIds", equalTo(ImmutableList.of(IComponent.ROOT_ID)))
-			.body("statedAncestorIds", equalTo(ImmutableList.of()))
+			.body("parentIds", equalTo(List.of(IComponent.ROOT_ID)))
+			.body("ancestorIds", equalTo(List.of()))
+			.body("statedParentIds", equalTo(List.of(IComponent.ROOT_ID)))
+			.body("statedAncestorIds", equalTo(List.of()))
 			.body("descriptions.items.active", everyItem(equalTo(true)))
 			.body("descriptions.items.inactivationProperties.inactivationIndicator.id", everyItem(equalTo(Concepts.CONCEPT_NON_CURRENT)));
 	}
@@ -76,9 +75,8 @@ public class SnomedConceptInactivationApiTest extends AbstractSnomedApiTest {
 	@Test
 	public void inactivateFullyDefinedConcept() throws Exception {
 		Map<String, ?> conceptRequestBody = createConceptRequestBody(Concepts.ROOT_CONCEPT)
-				.put("definitionStatusId", Concepts.FULLY_DEFINED)
-				.put("commitComment", "Created new concept")
-				.build();
+				.with("definitionStatusId", Concepts.FULLY_DEFINED)
+				.with("commitComment", "Created new concept");
 		String conceptId = createNewConcept(branchPath, conceptRequestBody);
 
 		inactivateConcept(branchPath, conceptId);
@@ -98,15 +96,15 @@ public class SnomedConceptInactivationApiTest extends AbstractSnomedApiTest {
 		// Inactivate the concept with the relationship is pointing to
 		final InactivationProperties inactivationProperties = new InactivationProperties(
 			Concepts.DUPLICATE,
-			ImmutableList.of(
+			List.of(
 				new AssociationTarget(Concepts.REFSET_POSSIBLY_EQUIVALENT_TO_ASSOCIATION, conceptWithReferenceToInactivatedConcept)
 			)
 		);
-		Map<String, Object> inactivationBody = ImmutableMap.<String, Object>builder()
-				.put("active", false)
-				.put("inactivationProperties", inactivationProperties)
-				.put("commitComment", "Inactivated concept")
-				.build();
+		Map<String, Object> inactivationBody = Json.object(
+			"active", false,
+			"inactivationProperties", inactivationProperties,
+			"commitComment", "Inactivated concept"
+		);
 
 		updateConcept(conceptToInactivate, inactivationBody);
 		
@@ -134,12 +132,12 @@ public class SnomedConceptInactivationApiTest extends AbstractSnomedApiTest {
 		assertGetConcept(conceptToInactivate, "inactivationProperties()")
 			.statusCode(200)
 			.body("active", equalTo(true))
-			.body("parentIds", equalTo(ImmutableList.of(Concepts.ROOT_CONCEPT))) // verify the the inferred and stated hierarchy is back and valid
-			.body("statedParentIds", equalTo(ImmutableList.of(Concepts.ROOT_CONCEPT)))
-			.body("ancestorIds", equalTo(ImmutableList.of(IComponent.ROOT_ID)))
-			.body("statedAncestorIds", equalTo(ImmutableList.of(IComponent.ROOT_ID)))
+			.body("parentIds", equalTo(List.of(Concepts.ROOT_CONCEPT))) // verify the the inferred and stated hierarchy is back and valid
+			.body("statedParentIds", equalTo(List.of(Concepts.ROOT_CONCEPT)))
+			.body("ancestorIds", equalTo(List.of(IComponent.ROOT_ID)))
+			.body("statedAncestorIds", equalTo(List.of(IComponent.ROOT_ID)))
 			.body("inactivationProperties.inactivationIndicator", nullValue())
-			.body("inactivationProperties.associationTargets", equalTo(ImmutableList.of()));
+			.body("inactivationProperties.associationTargets", equalTo(List.of()));
 		
 		// Verify that the inbound relationship is still inactive, meaning that manual reactivation is required
 		assertGetRelationship(inboundStatedRelationshipId)
@@ -151,11 +149,9 @@ public class SnomedConceptInactivationApiTest extends AbstractSnomedApiTest {
 	public void reactivateConceptWithInactiveParent() throws Exception {
 		// Create two concepts, one that will be inactivated
 		String inactiveParentConcept = createNewConcept(branchPath, createConceptRequestBody(ROOT_CONCEPT, Concepts.MODULE_SCT_CORE, SnomedApiTestConstants.UK_PREFERRED_MAP, false)
-				.put("commitComment", "Created new concept")
-				.build());
+				.with("commitComment", "Created new concept"));
 		String inactiveChildConcept = createNewConcept(branchPath, createConceptRequestBody(inactiveParentConcept, Concepts.MODULE_SCT_CORE, SnomedApiTestConstants.UK_PREFERRED_MAP, false)
-				.put("commitComment", "Created new concept")
-				.build());
+				.with("commitComment", "Created new concept"));
 
 		// Reactivate the child concept
 		reactivateConcept(branchPath, inactiveChildConcept);
@@ -164,12 +160,12 @@ public class SnomedConceptInactivationApiTest extends AbstractSnomedApiTest {
 		assertGetConcept(inactiveChildConcept, "inactivationProperties()")
 			.statusCode(200)
 			.body("active", equalTo(true))
-			.body("parentIds", equalTo(ImmutableList.of(IComponent.ROOT_ID)))
-			.body("statedParentIds", equalTo(ImmutableList.of(inactiveParentConcept)))
-			.body("ancestorIds", equalTo(ImmutableList.of()))
-			.body("statedAncestorIds", equalTo(ImmutableList.of(IComponent.ROOT_ID)))
+			.body("parentIds", equalTo(List.of(IComponent.ROOT_ID)))
+			.body("statedParentIds", equalTo(List.of(inactiveParentConcept)))
+			.body("ancestorIds", equalTo(List.of()))
+			.body("statedAncestorIds", equalTo(List.of(IComponent.ROOT_ID)))
 			.body("inactivationProperties.inactivationIndicator", nullValue())
-			.body("inactivationProperties.associationTargets", equalTo(ImmutableList.of()));
+			.body("inactivationProperties.associationTargets", equalTo(List.of()));
 		
 		// after reactivating the parent the child should have the proper parentage set
 		reactivateConcept(branchPath, inactiveParentConcept);
@@ -177,33 +173,31 @@ public class SnomedConceptInactivationApiTest extends AbstractSnomedApiTest {
 		assertGetConcept(inactiveParentConcept, "inactivationProperties()")
 			.statusCode(200)
 			.body("active", equalTo(true))
-			.body("parentIds", equalTo(ImmutableList.of(IComponent.ROOT_ID)))
-			.body("statedParentIds", equalTo(ImmutableList.of(Concepts.ROOT_CONCEPT)))
-			.body("ancestorIds", equalTo(ImmutableList.of()))
-			.body("statedAncestorIds", equalTo(ImmutableList.of(IComponent.ROOT_ID)))
+			.body("parentIds", equalTo(List.of(IComponent.ROOT_ID)))
+			.body("statedParentIds", equalTo(List.of(Concepts.ROOT_CONCEPT)))
+			.body("ancestorIds", equalTo(List.of()))
+			.body("statedAncestorIds", equalTo(List.of(IComponent.ROOT_ID)))
 			.body("inactivationProperties.inactivationIndicator", nullValue())
-			.body("inactivationProperties.associationTargets", equalTo(ImmutableList.of()));
+			.body("inactivationProperties.associationTargets", equalTo(List.of()));
 		
 		assertGetConcept(inactiveChildConcept, "inactivationProperties()")
 			.statusCode(200)
 			.body("active", equalTo(true))
-			.body("parentIds", equalTo(ImmutableList.of(IComponent.ROOT_ID)))
-			.body("statedParentIds", equalTo(ImmutableList.of(inactiveParentConcept)))
-			.body("ancestorIds", equalTo(ImmutableList.of()))
-			.body("statedAncestorIds", equalTo(ImmutableList.of(IComponent.ROOT_ID, Concepts.ROOT_CONCEPT)))
+			.body("parentIds", equalTo(List.of(IComponent.ROOT_ID)))
+			.body("statedParentIds", equalTo(List.of(inactiveParentConcept)))
+			.body("ancestorIds", equalTo(List.of()))
+			.body("statedAncestorIds", equalTo(List.of(IComponent.ROOT_ID, Concepts.ROOT_CONCEPT)))
 			.body("inactivationProperties.inactivationIndicator", nullValue())
-			.body("inactivationProperties.associationTargets", equalTo(ImmutableList.of()));
+			.body("inactivationProperties.associationTargets", equalTo(List.of()));
 	}
 
 	@Test
 	public void reactivateConceptWithInactiveParentRelationshipsFirst() throws Exception {
 		// Create two concepts, one that will be inactivated
 		String inactiveParentConcept = createNewConcept(branchPath, createConceptRequestBody(ROOT_CONCEPT, Concepts.MODULE_SCT_CORE, SnomedApiTestConstants.UK_PREFERRED_MAP, false)
-				.put("commitComment", "Created new concept")
-				.build());
+				.with("commitComment", "Created new concept"));
 		String inactiveChildConcept = createNewConcept(branchPath, createConceptRequestBody(inactiveParentConcept, Concepts.MODULE_SCT_CORE, SnomedApiTestConstants.UK_PREFERRED_MAP, false)
-				.put("commitComment", "Created new concept")
-				.build());
+				.with("commitComment", "Created new concept"));
 
 		final Map<String, Object> concept = assertGetConcept(inactiveChildConcept, "relationships()")
 				.statusCode(200)
@@ -229,12 +223,12 @@ public class SnomedConceptInactivationApiTest extends AbstractSnomedApiTest {
 		assertGetConcept(inactiveChildConcept, "inactivationProperties()")
 			.statusCode(200)
 			.body("active", equalTo(true))
-			.body("parentIds", equalTo(ImmutableList.of(IComponent.ROOT_ID)))
-			.body("statedParentIds", equalTo(ImmutableList.of(inactiveParentConcept)))
-			.body("ancestorIds", equalTo(ImmutableList.of()))
-			.body("statedAncestorIds", equalTo(ImmutableList.of(IComponent.ROOT_ID)))
+			.body("parentIds", equalTo(List.of(IComponent.ROOT_ID)))
+			.body("statedParentIds", equalTo(List.of(inactiveParentConcept)))
+			.body("ancestorIds", equalTo(List.of()))
+			.body("statedAncestorIds", equalTo(List.of(IComponent.ROOT_ID)))
 			.body("inactivationProperties.inactivationIndicator", nullValue())
-			.body("inactivationProperties.associationTargets", equalTo(ImmutableList.of()));
+			.body("inactivationProperties.associationTargets", equalTo(List.of()));
 		
 		// after reactivating the parent the child should have the proper parentage set
 		reactivateConcept(branchPath, inactiveParentConcept);
@@ -242,36 +236,34 @@ public class SnomedConceptInactivationApiTest extends AbstractSnomedApiTest {
 		assertGetConcept(inactiveParentConcept, "inactivationProperties()")
 			.statusCode(200)
 			.body("active", equalTo(true))
-			.body("parentIds", equalTo(ImmutableList.of(IComponent.ROOT_ID)))
-			.body("statedParentIds", equalTo(ImmutableList.of(Concepts.ROOT_CONCEPT)))
-			.body("ancestorIds", equalTo(ImmutableList.of()))
-			.body("statedAncestorIds", equalTo(ImmutableList.of(IComponent.ROOT_ID)))
+			.body("parentIds", equalTo(List.of(IComponent.ROOT_ID)))
+			.body("statedParentIds", equalTo(List.of(Concepts.ROOT_CONCEPT)))
+			.body("ancestorIds", equalTo(List.of()))
+			.body("statedAncestorIds", equalTo(List.of(IComponent.ROOT_ID)))
 			.body("inactivationProperties.inactivationIndicator", nullValue())
-			.body("inactivationProperties.associationTargets", equalTo(ImmutableList.of()));
+			.body("inactivationProperties.associationTargets", equalTo(List.of()));
 		
 		assertGetConcept(inactiveChildConcept, "inactivationProperties()")
 			.statusCode(200)
 			.body("active", equalTo(true))
-			.body("parentIds", equalTo(ImmutableList.of(IComponent.ROOT_ID)))
-			.body("statedParentIds", equalTo(ImmutableList.of(inactiveParentConcept)))
-			.body("ancestorIds", equalTo(ImmutableList.of()))
-			.body("statedAncestorIds", equalTo(ImmutableList.of(IComponent.ROOT_ID, Concepts.ROOT_CONCEPT)))
+			.body("parentIds", equalTo(List.of(IComponent.ROOT_ID)))
+			.body("statedParentIds", equalTo(List.of(inactiveParentConcept)))
+			.body("ancestorIds", equalTo(List.of()))
+			.body("statedAncestorIds", equalTo(List.of(IComponent.ROOT_ID, Concepts.ROOT_CONCEPT)))
 			.body("inactivationProperties.inactivationIndicator", nullValue())
-			.body("inactivationProperties.associationTargets", equalTo(ImmutableList.of()));
+			.body("inactivationProperties.associationTargets", equalTo(List.of()));
 	}
 	
 	@Test
 	public void reactivateConceptShouldRemoveConceptNonCurrentIndicatorsFromDescriptions() throws Exception {
 		final String inactiveConceptId = createNewConcept(branchPath, createConceptRequestBody(ROOT_CONCEPT, Concepts.MODULE_SCT_CORE, SnomedApiTestConstants.UK_PREFERRED_MAP, false)
-				.put("commitComment", "Created inactive concept")
-				.build());
+				.with("commitComment", "Created inactive concept"));
 		
 		// create non-current indicators for the pre-inactivated concept's descriptions 
 		getConcept(inactiveConceptId, "descriptions()").getDescriptions().forEach(description -> {
 			Map<?, ?> requestBody = createRefSetMemberRequestBody(Concepts.REFSET_DESCRIPTION_INACTIVITY_INDICATOR, description.getId())
-					.put(SnomedRf2Headers.FIELD_VALUE_ID, Concepts.CONCEPT_NON_CURRENT)
-					.put("commitComment", "Created new indicator member for description: " + description.getId())
-					.build();
+					.with(SnomedRf2Headers.FIELD_VALUE_ID, Concepts.CONCEPT_NON_CURRENT)
+					.with("commitComment", "Created new indicator member for description: " + description.getId());
 
 			createComponent(branchPath, SnomedComponentType.MEMBER, requestBody).statusCode(201);
 		});
@@ -281,12 +273,12 @@ public class SnomedConceptInactivationApiTest extends AbstractSnomedApiTest {
 		assertGetConcept(inactiveConceptId, "inactivationProperties(),descriptions(expand(inactivationProperties()))")
 			.statusCode(200)
 			.body("active", equalTo(true))
-			.body("parentIds", equalTo(ImmutableList.of(IComponent.ROOT_ID)))
-			.body("statedParentIds", equalTo(ImmutableList.of(Concepts.ROOT_CONCEPT)))
-			.body("ancestorIds", equalTo(ImmutableList.of()))
-			.body("statedAncestorIds", equalTo(ImmutableList.of(IComponent.ROOT_ID)))
+			.body("parentIds", equalTo(List.of(IComponent.ROOT_ID)))
+			.body("statedParentIds", equalTo(List.of(Concepts.ROOT_CONCEPT)))
+			.body("ancestorIds", equalTo(List.of()))
+			.body("statedAncestorIds", equalTo(List.of(IComponent.ROOT_ID)))
 			.body("inactivationProperties.inactivationIndicator", nullValue())
-			.body("inactivationProperties.associationTargets", equalTo(ImmutableList.of()))
+			.body("inactivationProperties.associationTargets", equalTo(List.of()))
 			.body("descriptions.items.active", everyItem(equalTo(true)))
 			.body("descriptions.items.inactivationProperties.inactivationIndicator[0].id", nullValue())
 			.body("descriptions.items.inactivationProperties.inactivationIndicator[1].id", nullValue());
